--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.25",
     "knex": "^3.1.0",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-spinners": "^0.13.8",
+    "react-syntax-highlighter": "^15.5.0",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
