--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "codebot",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tsc": "tsc",
+    "eslint": "eslint"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.20.1",
+    "@anthropic-ai/sdk": "^0.20.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@shadcn/ui": "^0.0.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
+    "fs": "^0.0.1-security",
     "knex": "^3.1.0",
-    "lucide-react": "^0.365.0",
+    "lucide-react": "^0.366.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -26,17 +30,24 @@
     "react-syntax-highlighter": "^15.5.0",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.7.2"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@eslint/js": "^9.0.0",
+    "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "*",
+    "typescript-eslint": "^7.6.0"
   }
 }
