--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@anthropic-ai/sdk": "^0.20.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@shadcn/ui": "^0.0.4",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -28,6 +29,8 @@
     "react-markdown": "^9.0.1",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
