--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "*",
-    "typescript-eslint": "^7.6.0"
+    "typescript-eslint": "^7.6.0",
+    "uuidv4": "^6.2.13"
   }
 }
