--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["codebot", "Codebot", "socker", "socketio", "uuidv"]
+  "cSpell.words": [
+    "bufferutil",
+    "clsx",
+    "codebot",
+    "Codebot",
+    "lucide",
+    "shadcn",
+    "socker",
+    "socketio",
+    "tailwindcss",
+    "uuidv"
+  ]
 }
