--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,10 @@
-{}
+{
+  "cSpell.words": [
+    "bufferutil",
+    "clsx",
+    "codebot",
+    "lucide",
+    "shadcn",
+    "tailwindcss"
+  ]
+}
